...
      );
      return;
    }

    _showDialog(
      message: "Czy na pewno chcesz zamówić tę trasę?",
      positiveText: "Tak",
      negativeText: "Nie",
      onAccept: () {
        Navigator.popUntil(context, (route) => route.isFirst);
      },
    );
  }
...
                        const SizedBox(height: 16),
                        Row(
                          children: [
                            Expanded(
                              child: ElevatedButton(
                                onPressed: confirmRoute,
                                child: const Text('Zatwierdź'),
                              ),
                            ),
                            const SizedBox(width: 16),
                            Expanded(
                              child: ElevatedButton(
                                onPressed: showCancelDialog,
...
