...
        padding: const EdgeInsets.all(16),
        child: Row(
          children: [
            Expanded(
              child: ChooseCarAppButton(
                context: context,
                title: 'Wybierz',
                onPressed: () {
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (context) => MapScreen(
                        carName: widget.car!.name!,
...
